@@ -72,7 +72,7 @@ class DebuggerParser
 
   private:
     enum {
-      kNumCommands   = 71,
+      kNumCommands   = 70,
       kMAX_ARG_TYPES = 10
     };
 
@@ -126,7 +126,6 @@ class DebuggerParser
 
     // List of available command methods
     void executeA();
-    void executeBank();
     void executeBase();
     void executeBreak();
     void executeBreakif();
