@@ -175,13 +175,6 @@ class CartridgeMC : public Cartridge
     void install(System& system);
 
     /**
-      Install pages for the specified bank in the system.
-
-      @param bank The bank that should be installed in the system
-    */
-    bool bank(uInt16 bank);
-
-    /**
       Get the current bank.
     */
     uInt16 bank() const;
