@@ -14,6 +14,10 @@
 
 4.0 to 4.1: (xxx xx, 2014)
 
+  * Removed the 'bank' command from the debugger prompt, as it only worked
+    with certain bankswitch types.  The bankswitch UI should now be used
+    to query/set bank state.
+
   * The UNIX configure script now supports newer versions of Hurd.
     Special thanks to Stephen Kitt for the patch.
 
